<resources>
    <string name="app_name">Speaking Reminder</string>
    <string name="dismiss">Dismiss</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recording">Recording...</string>
    <string name="press_hold_to_record">Press &amp; hold to record</string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="status">Status</string>
    <string name="delete">Delete</string>
    <string name="reminder_list">Reminder List</string>
    <string name="db_date_format">yyyy-MM-dd_hh-mm</string>
    <string name="db_date_format1">%s-%s-%s_%s-%s</string>
    <string name="m_duplicate_reminder">Reminder already set for this time. You can not set multiple reminders for same time.</string>
    <string name="duplicate_reminder">Duplicate Reminder Time</string>
    <string name="untitled">Untitled</string>
    <string name="no_items_found">No reminders</string>
    <string name="date">Date</string>
    <string name="audio">Audio</string>
    <string name="save">Save</string>
    <string name="enter_title_here">Enter title here</string>
    <string name="error">Error!</string>
    <string name="m_fields_error">Some fields left empty</string>
    <string name="success">Success!</string>
    <string name="m_reminder_saved">Reminder saved successfully</string>
    <string name="confirmation">Confirmation</string>
    <string name="m_delete_confirm">Are you sure, you want to delete this reminder?</string>
    <string name="set_repeating">Set repeating</string>
    <string name="list">Reminder List</string>
    <string name="pick_file">Pick audio from device</string>
    <string name="yearly">Yearly</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="daily">Daily</string>

    <string name="ad_home_banner">ca-app-pub-1619147317570175/1478689276</string>
    <string name="ad_reminder_list_banner">ca-app-pub-1619147317570175/8373134218</string>
    <string name="ad_reminder_details_banner">ca-app-pub-1619147317570175/1042250823</string>
    <string name="ad_process_completed_interstitial">ca-app-pub-1619147317570175/8908255602</string>
<!--    <string name="ad_home_banner">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="ad_process_completed_interstitial">ca-app-pub-3940256099942544/1033173712</string>-->
</resources>
